{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 84,
  "lineage": "c0f510c1-2285-53e9-c314-c32385b32f2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-03d0635f67df15b5e",
            "description": "Database security group",
            "egress": [],
            "id": "sg-03d0635f67df15b5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "my-db-sg",
            "name_prefix": "",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-db-sg",
              "thesis-cost-db": "eks",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-db-sg",
              "thesis-cost-db": "eks",
              "thesis-cost-general": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-01d2cc4f7415b95b8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-01d2cc4f7415b95b8",
            "ingress": [],
            "name": "my-eks-cluster-cluster-2023121009143449500000000d",
            "name_prefix": "my-eks-cluster-cluster-",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-cluster",
              "thesis-cost-general": "eks",
              "thesis-cost-vm": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-cluster-cluster",
              "thesis-cost-general": "eks",
              "thesis-cost-vm": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-035618d4b73a1f86c",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-035618d4b73a1f86c",
            "ingress": [],
            "name": "my-eks-cluster-node-2023121009143449070000000c",
            "name_prefix": "my-eks-cluster-node-",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-node",
              "kubernetes.io/cluster/my-eks-cluster": "owned",
              "thesis-cost-general": "eks",
              "thesis-cost-vm": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-cluster-node",
              "kubernetes.io/cluster/my-eks-cluster": "owned",
              "thesis-cost-general": "eks",
              "thesis-cost-vm": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2528345211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01d2cc4f7415b95b8",
            "security_group_rule_id": "sgr-048a7a89574214730",
            "self": false,
            "source_security_group_id": "sg-035618d4b73a1f86c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1167721663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-0bd0a0ea701c08b9f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2752308871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-01232c0742851b2a1",
            "self": false,
            "source_security_group_id": "sg-01d2cc4f7415b95b8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3322196360",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-06d031c1a309f37bd",
            "self": false,
            "source_security_group_id": "sg-01d2cc4f7415b95b8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-256300574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-0b344439a8420e5fe",
            "self": false,
            "source_security_group_id": "sg-01d2cc4f7415b95b8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-471525951",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-0cc373f1a8b1c579b",
            "self": false,
            "source_security_group_id": "sg-01d2cc4f7415b95b8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2025576948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-003f419ca79d4a6b9",
            "self": false,
            "source_security_group_id": "sg-01d2cc4f7415b95b8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-267771030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-01ac5ae8290619b46",
            "self": false,
            "source_security_group_id": "sg-01d2cc4f7415b95b8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2562085009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-02126fa37fa4444f2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2999405907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-0948420e1c9aa3099",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-379121340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-035618d4b73a1f86c",
            "security_group_rule_id": "sgr-01a69499c706d5add",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:network-acl/acl-0f25536acb10f92cb",
            "default_network_acl_id": "acl-0f25536acb10f92cb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f25536acb10f92cb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "436888476506",
            "subnet_ids": [
              "subnet-0194e5e6df85e703f",
              "subnet-02140c55b3f8d8571",
              "subnet-03141273acd15c6d3",
              "subnet-066dd92dc513d01c1",
              "subnet-0c74fd3f50e3e460d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-0cebe6638ae2b84e3",
            "default_route_table_id": "rtb-0cebe6638ae2b84e3",
            "id": "rtb-0cebe6638ae2b84e3",
            "owner_id": "436888476506",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-07e279dccef62e1b0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07e279dccef62e1b0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036b91a3ee05e620f",
            "domain": "vpc",
            "id": "eipalloc-036b91a3ee05e620f",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-77-182-204.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.182.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0395fd301dd9ed109",
            "domain": "vpc",
            "id": "eipalloc-0395fd301dd9ed109",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-58-43-172.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.58.43.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d76bb3e847b2b73",
            "domain": "vpc",
            "id": "eipalloc-01d76bb3e847b2b73",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-194-142-223.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.142.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:internet-gateway/igw-059e30a4fbbc7d498",
            "id": "igw-059e30a4fbbc7d498",
            "owner_id": "436888476506",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036b91a3ee05e620f",
            "association_id": "eipassoc-05b1e2a3234487738",
            "connectivity_type": "public",
            "id": "nat-0f1495578fed94b08",
            "network_interface_id": "eni-00ef0eb59aa02c7f8",
            "private_ip": "10.0.101.251",
            "public_ip": "3.77.182.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c74fd3f50e3e460d",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0395fd301dd9ed109",
            "association_id": "eipassoc-00fc7081ba001fb1a",
            "connectivity_type": "public",
            "id": "nat-09426d647d29eff54",
            "network_interface_id": "eni-09df98d54366f9e6b",
            "private_ip": "10.0.102.228",
            "public_ip": "52.58.43.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033873c790a61d0e9",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d76bb3e847b2b73",
            "association_id": "eipassoc-015113ed0b9096b6e",
            "connectivity_type": "public",
            "id": "nat-0a192154686061289",
            "network_interface_id": "eni-0dab26913781ead47",
            "private_ip": "10.0.103.172",
            "public_ip": "18.194.142.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066dd92dc513d01c1",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09577eef36238a8751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f1495578fed94b08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09577eef36238a875",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051a01ba4c36774731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09426d647d29eff54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051a01ba4c3677473",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d56af90261e02abe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a192154686061289",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d56af90261e02abe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059e30a4fbbc7d498",
            "id": "r-rtb-071af641bd5c664311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071af641bd5c66431",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-09577eef36238a875",
            "id": "rtb-09577eef36238a875",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-private-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-private-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-051a01ba4c3677473",
            "id": "rtb-051a01ba4c3677473",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-private-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-private-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-0d56af90261e02abe",
            "id": "rtb-0d56af90261e02abe",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-private-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-private-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-071af641bd5c66431",
            "id": "rtb-071af641bd5c66431",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-public",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc-public",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced295dfe59ac943",
            "route_table_id": "rtb-09577eef36238a875",
            "subnet_id": "subnet-03141273acd15c6d3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0837cfb5a2c22f095",
            "route_table_id": "rtb-051a01ba4c3677473",
            "subnet_id": "subnet-0194e5e6df85e703f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014e19accd85f3be0",
            "route_table_id": "rtb-0d56af90261e02abe",
            "subnet_id": "subnet-02140c55b3f8d8571"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f41dab78d8a82b7",
            "route_table_id": "rtb-071af641bd5c66431",
            "subnet_id": "subnet-0c74fd3f50e3e460d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02da65e2c7230d5ac",
            "route_table_id": "rtb-071af641bd5c66431",
            "subnet_id": "subnet-033873c790a61d0e9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070767e1b76e1ea0c",
            "route_table_id": "rtb-071af641bd5c66431",
            "subnet_id": "subnet-066dd92dc513d01c1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-03141273acd15c6d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03141273acd15c6d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0194e5e6df85e703f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0194e5e6df85e703f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-02140c55b3f8d8571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02140c55b3f8d8571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0c74fd3f50e3e460d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c74fd3f50e3e460d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-033873c790a61d0e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033873c790a61d0e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-066dd92dc513d01c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066dd92dc513d01c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "eks"
            },
            "vpc_id": "vpc-05af399433c44dc95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:vpc/vpc-05af399433c44dc95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f25536acb10f92cb",
            "default_route_table_id": "rtb-0cebe6638ae2b84e3",
            "default_security_group_id": "sg-07e279dccef62e1b0",
            "dhcp_options_id": "dopt-0e9ce2aa924f30e88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05af399433c44dc95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cebe6638ae2b84e3",
            "owner_id": "436888476506",
            "tags": {
              "Environment": "dev",
              "Name": "my-ecs-vpc",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-ecs-vpc",
              "Terraform": "true",
              "thesis-cost-general": "eks"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}